# doorbell-pin-daemon

./: .gitignore  CMakeLists.txt  README.md
board/: doorbell-cache.lib  doorbell.bak  doorbell.kicad_pcb  doorbell.kicad_pcb-bak  doorbell.pro  doorbell.sch
enclosure/: Hackrobot.dxf  rfid_reader.scad
include/: pin_daemon.h  pin_daemon_internal.h
src/: main.c  pin_finish.c  pin_get_state.c  pin_run.c  pin_set_state.c  pin_start.c
src/internal/: drain_sysfs_file.c  wait_for_file.c  write_to_file.c
startup/: doorbell.service.in  doorbell_startup.sh
test/include/: test.h
test/resources/: pins.conf
test/src/: test.c  test_socket_triggers_callback_on_read.c
